@@ -15,7 +15,8 @@ import llfuse
 import collections
 import logging
 from .inode_cache import InodeCache, OutOfInodesError
-from .common import (get_path, CTRL_NAME, CTRL_INODE, log_stacktraces, without)
+from .common import (get_path, CTRL_NAME, CTRL_INODE, log_stacktraces, without,
+                     LoggerFilter)
 import time
 from .block_cache import BlockCache
 from cStringIO import StringIO
@@ -237,8 +238,7 @@ class Operations(llfuse.Operations):
                 self.remove_tree(*pickle.loads(value))
             
             elif name == 'logging':
-                # TODO: Change logging
-                pass
+                update_logging(*pickle.loads(value))
                                           
             elif name == 'stacktrace':
                 log_stacktraces()
@@ -994,3 +994,21 @@ class Operations(llfuse.Operations):
         if not datasync:
             self.inodes.flush_id(fh)
 
+
+def update_logging(level, modules):           
+    root_logger = logging.getLogger()
+    if level == logging.DEBUG:
+        logging.disable(logging.NOTSET)
+        for handler in root_logger.handlers:
+            for filter_ in [ f for f in handler.filters if isinstance(f, LoggerFilter) ]:
+                handler.removeFilter(filter_)
+            handler.setLevel(level)
+        
+        if 'all' not in modules:  
+            for handler in root_logger.handlers:
+                handler.addFilter(LoggerFilter(modules, logging.INFO))
+                        
+    else: 
+        logging.disable(logging.DEBUG)
+            
+    root_logger.setLevel(level)
